--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "community-tech-platform",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "build": "next build",
